Исправлена ссылка на сайт.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>
          <a href="mailto:mail@gmail.com">Почта</a> 
          &nbsp;
-         <a href="ya.ru">сайт</a>
+         <a href="http://ya.ru">сайт</a>
       </p>
 
   </div>
