--- a/index.html
+++ b/index.html
@@ -7,68 +7,8 @@
   <title>Андрюха</title>
  </head>
  <body>
-  <div id="header">
-      <h1>
-          Супер Андрюха!
-     </h1>
-      <h3>
-          Супер специалист!
-      </h3>
-      <p>
-         <a href="mailto:mail@gmail.com">Почта</a> 
-         &nbsp;
-         <a href="http://ya.ru">сайт</a>
-      </p>
-
-  </div>
-    
-  <div id="main">
-<p>
-        Привет народ! Ниже небольшая справка о творце этой страницы!
-        Приятного чтения!
-    </p>
-    <h2>
-        Опыт работы
-    </h2>
-    <ul>
-        <li>
-            Гос учередение аж 8 лет!
-        </li>
-        <li>
-            Компания интегратор. Уже более 5 лет, а ещё не уволили!
-        </li>
-    </ul>
-    <h2>
-        Образование
-    </h2>
-    <ul>
-        <li>
-            Среднеспециальное
-        </li>
-        <li>
-            Неоконеченное высшее (совсем чуть-чуть неоконченное!)
-        </li>
-    </ul>
-    <h2>
-        Другие навыки и увлечения
-    </h2>
-    <ul>
-        <li>
-            Проффесиональный лентяй
-        </li>
-        <li>
-            Занимался различными видами спорта несмотря на предыдущий пункт!
-        </li>
-    </ul>
-  </div>
-
-  <div id="footer">
-  
-    <p>
-        Андрюха!
-        <br>
-        +7495-678-90-12 <a href="mailto:mail@gmail.com">Почта</a>
-    </p>
+  <div>
+      <p>Its Work?<p>
   </div>
  </body>
 </html>
